--- a/Home.html
+++ b/Home.html
@@ -98,22 +98,22 @@
           <div class="item">
             <img src="./images/image1.jpg" alt="burger" />
             <div class="content">
-              <div class="title">Name Slider</div>
-              <div class="des">Description</div>
+              <div class="title">Super Burger</div>
+              <div class="des">Double Layer Patty</div>
             </div>
           </div>
           <div class="item">
             <img src="./images/image2.jpg" alt="burger" />
             <div class="content">
-              <div class="title">Name Slider</div>
-              <div class="des">Description</div>
+              <div class="title">300lbs Omega Burger</div>
+              <div class="des">Best Selling</div>
             </div>
           </div>
           <div class="item">
             <img src="./images/image3.jpg" alt="burger" />
             <div class="content">
-              <div class="title">Name Slider</div>
-              <div class="des">Description</div>
+              <div class="title">Sizzling Mega Burger</div>
+              <div class="des">Hot and Spicy</div>
             </div>
           </div>
         </div>
